Updgrade CSS and HTML File >> add link, labels and images alternative

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>My Portfolio</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
         <h2 class="logo"><a href="#">Welcome</a></h2>
         <nav>
@@ -27,44 +27,44 @@
     </header>
     <section id="portfolio-section" class="home-page">
         <div class="welcome-text">
-            <h1 class="intro">Hey there. I’m Theodore <br /><span>I’m a software<br/>developer</span></h1>
+            <h1 class="intro">Hey there. I’m Theodore <br /><span>I’m a software<br />developer</span></h1>
             <p class="info">
                 I can help you build a product , feature or website Look through some of
                 my work and experience! If you like what you see and have a project you
                 need coded, don’t hesitate to contact me.
             </p>
-        </div> 
+        </div>
         <ul class="icon-list">
             <li>
-            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
+                <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
             </li>
             <li>
-            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
+                <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
             </li>
             <li>
-            <a href="#"><i class="fa fa-medium" aria-hidden="true"></i> </a>
+                <a href="https://medium.com/"><i class="fa fa-medium" aria-hidden="true"></i> </a>
             </li>
             <li>
-            <a href="#"><i class="fa fa-github" aria-hidden="true"></i> </a>
+                <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i> </a>
             </li>
             <li>
-            <a href="#"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
+                <a href="https://angel.co/"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
             </li>
         </ul>
     </section>
-    <section  class="work-section">
+    <section class="work-section">
         <div class="disable-btn">
-            <img src="IMG/Disabled.png" alt="down-btn">
+            <img src="IMG/Disabled.png" alt="down button">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
         </div>
         <div class="green-line">
-            <img src="IMG/Indicator.png" alt="green line">
+            <img src="IMG/Indicator.png" alt="green break line">
         </div>
         <div class="project-container">
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -161,9 +161,10 @@
             <h2 class="about-heading">About Me</h2>
         </div>
         <div class="section-paragraph">
-            <p class="about-text"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            <p class="about-text"> I can help you build a product, feature or website Look through some of my work and
+                experience! If you like what you see and have a project you need coded,
                 don’t hesitate to contact me.</p>
-        </div> 
+        </div>
         <div class="project-btn">
             <button type="button">Get My Resume</button>
         </div>
@@ -171,75 +172,92 @@
     <section class="about">
         <ul class="d-flex">
             <li class="tech-list">
-                <img src="./IMG/img/icon-languages.svg" alt="#">
+                <img src="./IMG/img/icon-languages.svg" alt="Language icon">
                 <div class="about-me-btn">
-                <h2 class="lang">Language</h2>
-                <ul class="tec-btns">
-                    <li class="common">Javascript</li>
-                    <li class="common">Ruby</li>
-                    <li class="common">Html</li>
-                    <li class="common">Css</li>
-                </ul>
+                    <h2 class="lang">Language</h2>
+                    <ul class="tec-btns">
+                        <li class="common">Javascript</li>
+                        <li class="common">Ruby</li>
+                        <li class="common">Html</li>
+                        <li class="common">Css</li>
+                    </ul>
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/img/icon-frameworks.svg" alt="#">
+                <img src="./IMG/img/icon-frameworks.svg" alt="Frameworks icon">
                 <div class="about-me-btn">
-                <h2 class="lang">Frameworks</h2>
-                <ul class="tec-btns">
-                    <li class="common">Bootstrap</li>
-                    <li class="common">Ruby on rails</li>
-                    <li class="common">RSpec</li>
-                    <li class="common">Capybara</li>
-                    <li class="common">Selenium</li>
-                </ul>
+                    <h2 class="lang">Frameworks</h2>
+                    <ul class="tec-btns">
+                        <li class="common">Bootstrap</li>
+                        <li class="common">Ruby on rails</li>
+                        <li class="common">RSpec</li>
+                        <li class="common">Capybara</li>
+                        <li class="common">Selenium</li>
+                    </ul>
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/img/icon-skills.svg" alt="#">
-                <div  class="about-me-btn">
-                <h2 class="lang">Skills</h2>
-                <ul class="tec-btns">
-                    <li class="common">Codekit</li>
-                    <li class="common">GitHub</li>
-                    <li class="common">Codepen</li>
-                    <li class="common">Gitlab</li>
-                    <li class="common">Terminal</li>
-                </ul>
+                <img src="./IMG/img/icon-skills.svg" alt="Skills icon">
+                <div class="about-me-btn">
+                    <h2 class="lang">Skills</h2>
+                    <ul class="tec-btns">
+                        <li class="common">Codekit</li>
+                        <li class="common">GitHub</li>
+                        <li class="common">Codepen</li>
+                        <li class="common">Gitlab</li>
+                        <li class="common">Terminal</li>
+                    </ul>
                 </div>
             </li>
         </ul>
     </section>
-    
+
     <section id="contact-section" class="footer-nav">
         <div class="footer-grid">
-            <h2 class="form-title">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+            <h2 class="form-title">I'm always interested in hearing about new projects, so if you'd like to chat please
+                get in touch.</h2>
             <form action="https://formspree.io/f/xbjwrbyd" method="POST" class="message-form">
-                <input type="text" name="firstname" placeholder=" First Name" maxlength="30" required class="form-control input1">
-                <input type="text" name="lastname" placeholder="Last Name" maxlength="30" required class="form-control input2">
-                <input type="email" name="email" placeholder="Email" maxlength="30" required class="form-control input3">
-                <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required class="form-control input4"></textarea>
+                <div class="label_and_box">
+                    <label for="First Name">Full Name</label>
+                    <input type="text" name="firstname" placeholder=" First Name" maxlength="30" required
+                        class="form-control input1" id="First Name">
+                </div>
+                <div class="label_and_box">
+                    <label for="Last Name">Last Name</label>
+                    <input type="text" name="lastname" placeholder="Last Name" maxlength="30" required
+                        class="form-control input2" id="Last Name">
+                </div>
+                <div class="label_and_box">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" placeholder="Email" maxlength="30" required
+                        class="form-control input3" id="email">
+                </div>
+                <div class="label_and_box">
+                    <label for="Type a message">Type a message</label>
+                    <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required
+                        class="form-control input4" id="Type a message"></textarea>
+                </div>
                 <button type="submit" class="btn-form input5">Get in touch</button>
             </form>
         </div>
     </section>
-    <hr/>
+    <hr />
     <footer>
         <ul class="icon-list">
             <li>
-            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
+                <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
             </li>
             <li>
-            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
+                <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
             </li>
             <li>
-            <a href="#"><i class="fa fa-medium" aria-hidden="true"></i> </a>
+                <a href="https://medium.com/"><i class="fa fa-medium" aria-hidden="true"></i> </a>
             </li>
             <li>
-            <a href="#"><i class="fa fa-github" aria-hidden="true"></i> </a>
+                <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i> </a>
             </li>
             <li>
-            <a href="#"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
+                <a href="https://angel.co/"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
             </li>
         </ul>
         <h3 class="email-title"><a href="alberttheodore17@gmail.com">alberttheodore17@gmail.com</a></h3>
@@ -248,6 +266,6 @@
 
 
     <script src="https://use.fontawesome.com/1226aa0088.js"></script>
-  </body>
-</html>
+</body>
 
+</html>
