--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
     <section class="work-section">
         <div class="disable-btn">
-            <img src="IMG/Disabled.png" alt="down button">
+            <img src="https://github.com/Theodore354/MOBILE-SKELETON-VERSION-2/blob/deployment-branch/img/Disabled.png" alt="down button">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
