Add keyboard access and visual focus to buttons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <ul class="icon-list">
             <li>
-                <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
+                <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
@@ -75,7 +75,7 @@
                     <li>html</li>
                 </ul>
                 <div class="project-btn">
-                    <button type="button">See Project</button>
+                    <button type="button"><a href="#">See Project</a></button>
                 </div>
             </div>
             <div class="project-card">
@@ -90,7 +90,7 @@
                     <li>html</li>
                 </ul>
                 <div class="project-btn">
-                    <button type="button">See Project</button>
+                    <button type="button"><a href="#">See Project</a></button>
                 </div>
             </div>
             <div class="project-card">
@@ -105,7 +105,7 @@
                     <li>html</li>
                 </ul>
                 <div class="project-btn">
-                    <button type="button">See Project</button>
+                    <button type="button"><a href="#">See Project</a></button>
                 </div>
             </div>
             <div class="project-card">
@@ -120,7 +120,7 @@
                     <li>html</li>
                 </ul>
                 <div class="project-btn">
-                    <button type="button">See Project</button>
+                    <button type="button"><a href="#">See Project</a></button>
                 </div>
             </div>
             <div class="project-card">
@@ -135,7 +135,7 @@
                     <li>html</li>
                 </ul>
                 <div class="project-btn">
-                    <button type="button">See Project</button>
+                    <button type="button"><a href="#">See Project</a></button>
                 </div>
             </div>
             <div class="project-card">
@@ -150,7 +150,7 @@
                     <li>html</li>
                 </ul>
                 <div class="project-btn">
-                    <button type="button">See Project</button>
+                    <button type="button"><a href="#">See Project</a></button>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
                 don’t hesitate to contact me.</p>
         </div>
         <div class="project-btn">
-            <button type="button">Get My Resume</button>
+            <button type="button"><a href="#">Get My Resume</a></button>
         </div>
     </section>
     <section class="about">
@@ -237,7 +237,7 @@
                     <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required
                         class="form-control input4" id="Type a message"></textarea>
                 </div>
-                <button type="submit" class="btn-form input5">Get in touch</button>
+                <button type="submit" class="btn-form input5"><a href="#">Get in touch</a></button>
             </form>
         </div>
     </section>
