Fix social media icons

--- a/index.html
+++ b/index.html
@@ -36,39 +36,35 @@
         </div>
         <ul class="icon-list">
             <li>
-<<<<<<< HEAD
                 <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-=======
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
->>>>>>> 9e51140edeb3a0d9ef8d547870ae6829a6a3c8a9
             </li>
             <li>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
+                <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-medium" aria-hidden="true"></i> </a>
+                <a href="https://medium.com/"><i class="fa fa-medium" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-github" aria-hidden="true"></i> </a>
+                <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
+                <a href="https://angel.co/"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
             </li>
         </ul>
     </section>
     <section class="work-section">
         <div class="disable-btn">
-            <img src="./IMG/Disabled.png" alt="down-btn">
+            <img src="IMG/Disabled.png" alt="down button">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
         </div>
         <div class="green-line">
-            <img src="./IMG/Indicator.png" alt="green line">
+            <img src="IMG/Indicator.png" alt="green break line">
         </div>
         <div class="project-container">
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -83,7 +79,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -98,7 +94,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -113,7 +109,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -128,7 +124,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -143,7 +139,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -176,7 +172,7 @@
     <section class="about">
         <ul class="d-flex">
             <li class="tech-list">
-                <img src="./IMG/icon-languages.svg" alt="#">
+                <img src="./IMG/img/icon-languages.svg" alt="Language icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Language</h2>
                     <ul class="tec-btns">
@@ -188,7 +184,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/icon-frameworks.svg" alt="#">
+                <img src="./IMG/img/icon-frameworks.svg" alt="Frameworks icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Frameworks</h2>
                     <ul class="tec-btns">
@@ -201,7 +197,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/icon-skills.svg" alt="#">
+                <img src="./IMG/img/icon-skills.svg" alt="Skills icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Skills</h2>
                     <ul class="tec-btns">
@@ -221,7 +217,6 @@
             <h2 class="form-title">I'm always interested in hearing about new projects, so if you'd like to chat please
                 get in touch.</h2>
             <form action="https://formspree.io/f/xbjwrbyd" method="POST" class="message-form">
-<<<<<<< HEAD
                 <div class="label_and_box">
                     <label for="First Name">Full Name</label>
                     <input type="text" name="firstname" placeholder=" First Name" maxlength="30" required
@@ -243,17 +238,6 @@
                         class="form-control input4" id="Type a message"></textarea>
                 </div>
                 <button type="submit" class="btn-form input5"><a href="#">Get in touch</a></button>
-=======
-                <input type="text" name="firstname" placeholder=" First Name" maxlength="30" required
-                    class="form-control input1">
-                <input type="text" name="lastname" placeholder="Last Name" maxlength="30" required
-                    class="form-control input2">
-                <input type="email" name="email" placeholder="Email" maxlength="30" required
-                    class="form-control input3">
-                <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required
-                    class="form-control input4"></textarea>
-                <button type="submit" class="btn-form input5">Get in touch</button>
->>>>>>> 9e51140edeb3a0d9ef8d547870ae6829a6a3c8a9
             </form>
         </div>
     </section>
@@ -261,19 +245,19 @@
     <footer>
         <ul class="icon-list">
             <li>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
+                <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
+                <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-medium" aria-hidden="true"></i> </a>
+                <a href="https://medium.com/"><i class="fa fa-medium" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-github" aria-hidden="true"></i> </a>
+                <a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i> </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
+                <a href="https://angel.co/"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
             </li>
         </ul>
         <h3 class="email-title"><a href="alberttheodore17@gmail.com">alberttheodore17@gmail.com</a></h3>
