--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
     </section>
     <section class="work-section">
         <div class="disable-btn">
-            <img src="IMG/Disabled.png" alt="down button">
+            <img src="./IMG/Disabled.png" alt="down button">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
         </div>
         <div class="green-line">
-            <img src="IMG/Indicator.png" alt="green break line">
+            <img src="./IMG/Indicator.png" alt="green break line">
         </div>
         <div class="project-container">
             <div class="project-card">
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project">
+                <img src="./IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project">
+                <img src="./IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project">
+                <img src="./IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project">
+                <img src="./IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="IMG/Plaholder.png" alt="Project">
+                <img src="./IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
