fix image error

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
     <section class="work-section">
         <div class="disable-btn">
-            <img src="./IMG/Disabled.png" alt="down button">
+            <img src="C:\MOBILE-SKELETON-VERSION-2\IMG\Disabled.png" alt="down button">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
