--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
     </section>
     <section class="work-section">
         <div class="disable-btn">
-            <img src=".\IMG\Disabled.png" alt="down button">
+            <img src="./IMG/Disabled.png" alt="down button">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
         </div>
         <div class="green-line">
-            <img src="/IMG/Indicator.png" alt="green break line">
+            <img src="./IMG/Indicator.png" alt="green break line">
         </div>
         <div class="project-container">
             <div class="project-card">
-                <img src="C:\MOBILE-SKELETON-VERSION-2\IMG\Plaholder.png" alt="Project">
+                <img src="./IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -75,11 +75,11 @@
                     <li>html</li>
                 </ul>
                 <div class="project-btn">
-                    <button type="button"><a href="#">See Project</a></button>
+                    <a href="#"></a><button type="button">See Project</button></a>
                 </div>
             </div>
             <div class="project-card">
-                <img src="\IMG\Plaholder.png" alt="Project">
+                <img src="./IMG/Plaholder.png" alt="Project">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -172,7 +172,7 @@
     <section class="about">
         <ul class="d-flex">
             <li class="tech-list">
-                <img src="./IMG/img/icon-languages.svg" alt="Language icon">
+                <img src="./IMG/icon-languages.svg" alt="Language icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Language</h2>
                     <ul class="tec-btns">
@@ -184,7 +184,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/img/icon-frameworks.svg" alt="Frameworks icon">
+                <img src="./IMG/icon-frameworks.svg" alt="Frameworks icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Frameworks</h2>
                     <ul class="tec-btns">
@@ -197,7 +197,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/img/icon-skills.svg" alt="Skills icon">
+                <img src="./IMG/icon-skills.svg" alt="Skills icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Skills</h2>
                     <ul class="tec-btns">
@@ -218,14 +218,14 @@
                 get in touch.</h2>
             <form action="https://formspree.io/f/xbjwrbyd" method="POST" class="message-form">
                 <div class="label_and_box">
-                    <label for="First Name">Full Name</label>
+                    <label for="First_Name">Full Name</label>
                     <input type="text" name="firstname" placeholder=" First Name" maxlength="30" required
-                        class="form-control input1" id="First Name">
+                        class="form-control input1" id="First_Name">
                 </div>
                 <div class="label_and_box">
-                    <label for="Last Name">Last Name</label>
+                    <label for="Last_Name">Last Name</label>
                     <input type="text" name="lastname" placeholder="Last Name" maxlength="30" required
-                        class="form-control input2" id="Last Name">
+                        class="form-control input2" id="Last_Name">
                 </div>
                 <div class="label_and_box">
                     <label for="email">Email</label>
@@ -233,9 +233,9 @@
                         class="form-control input3" id="email">
                 </div>
                 <div class="label_and_box">
-                    <label for="Type a message">Type a message</label>
+                    <label for="Type_a_message">Type a message</label>
                     <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required
-                        class="form-control input4" id="Type a message"></textarea>
+                        class="form-control input4" id="Type_a_message"></textarea>
                 </div>
                 <button type="submit" class="btn-form input5"><a href="#">Get in touch</a></button>
             </form>
