Fix webhint error

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <li>html</li>
                 </ul>
                 <div class="project-btn">
-                    <a href="#"><button type="button"><a href="#">See Project</button></a>
+                    <a href="#"><button type="button">See Project</button></a>
                 </div>
             </div>
             <div class="project-card">
