fix background image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2>My Recent Works</h2>
         </div>
         <div class="green-line">
-            <img src="./IMG/Indicator.png" alt="green break line">
+            <img src="./img/Indicator.png" alt="green break line">
         </div>
         <div class="project-container">
             <div class="project-card">
