--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <section class="about">
         <ul class="d-flex">
             <li class="tech-list">
-                <img src="./IMG/icon-languages.svg" alt="Language icon">
+                <img src="./img/icon-languages.svg" alt="Language icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Language</h2>
                     <ul class="tec-btns">
