fix background image

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/icon-frameworks.svg" alt="Frameworks icon">
+                <img src="./img/icon-frameworks.svg" alt="Frameworks icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Frameworks</h2>
                     <ul class="tec-btns">
@@ -198,7 +198,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/icon-skills.svg" alt="Skills icon">
+                <img src="./img/icon-skills.svg" alt="Skills icon">
                 <div class="about-me-btn">
                     <h2 class="lang">Skills</h2>
                     <ul class="tec-btns">
