--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
     <section class="work-section">
         <div class="disable-btn">
-            <img src="https://github.com/Theodore354/MOBILE-SKELETON-VERSION-2/blob/deployment-branch/img/Disabled.png" alt="down-btn">
+            <img src="" alt="down-btn">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
@@ -64,7 +64,7 @@
         </div>
         <div class="project-container">
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="./IMG/Placeholder.png" alt="Project image">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="./img/Plaholder.png" alt="Project image">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="./img/Plaholder.png" alt="Project image">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="./img/Plaholder.png" alt="Project image">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="./img/Plaholder.png" alt="Project image">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./IMG/Plaholder.png" alt="Project image">
+                <img src="./img/Plaholder.png" alt="Project image">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
