fix bacground error

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <section class="about">
         <ul class="d-flex">
             <li class="tech-list">
-                <img src="./IMG/icon-languages.svg" alt="#">
+                <img src="./img/icon-languages.svg" alt="#">
                 <div class="about-me-btn">
                     <h2 class="lang">Language</h2>
                     <ul class="tec-btns">
@@ -184,7 +184,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/icon-frameworks.svg" alt="#">
+                <img src="./img/icon-frameworks.svg" alt="#">
                 <div class="about-me-btn">
                     <h2 class="lang">Frameworks</h2>
                     <ul class="tec-btns">
@@ -197,7 +197,7 @@
                 </div>
             </li>
             <li class="tech-list">
-                <img src="./IMG/icon-skills.svg" alt="#">
+                <img src="./img/icon-skills.svg" alt="#">
                 <div class="about-me-btn">
                     <h2 class="lang">Skills</h2>
                     <ul class="tec-btns">
