--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
     </section>
     <section class="work-section">
         <div class="disable-btn">
-            <img src="img/placeholder.png" alt="down-btn">
+            <img src="./img/placeholder.png" alt="down-btn">
         </div>
         <div class="section-title">
             <h2>My Recent Works</h2>
         </div>
         <div class="green-line">
-            <img src="./img/Indicator.png" alt="green line">
+            <img src="./IMG/Indicator.png" alt="green line">
         </div>
         <div class="project-container">
             <div class="project-card">
-                <img src="./img/Plaholder.png" alt="Project image">
+                <img src="./IMG/Plaholder.png" alt="Project image">
                 <div class="card-title">
                     <h4>Multi-Post Stories Gain+Glory</h4>
                 </div>
